Make code base compatible with Java 20
"new URL(String)" is deprecated there.